[package]
name = "nu-ansi-term-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
console = "0.16.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
human-repr = "1.1.0"
indicatif = { version = "0.18.0", features = ["rayon"] }
rayon = "1.11.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[dependencies.crates-index]
version = "3.11.0"
features = ["git", "git-performance", "git-https-reqwest", "parallel"]

[dependencies.gix]
version = "*"
features = ["blocking-http-transport-reqwest-rust-tls"]
