[package]
name = "nu-ansi-term-compat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cargo = { version = "0.91.0", default-features = false }
cargo-util-schemas = "*"
console = "0.16.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
gix = { version = "0.73.0", features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
human-repr = "1.1.0"
ignore = "0.4.23"
indicatif = { version = "0.18.0", features = ["rayon"] }
parking_lot = "0.12.4"
rayon = "1.11.0"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.145"
serde_spanned = "1.0.2"
toml = "0.9.7"
url = "2.5.7"

[dependencies.crates-index]
version = "3.11.0"
default-features = false
git = "https://github.com/cptpiepmatz/rust-crates-index.git"
branch = "expose-features2"
